前端javascript基本完成

--- a/main.html
+++ b/main.html
@@ -5,39 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <title>中国语言地图网</title>
-  </head>
+    <title>中国语言地图网China Language Resource Map</title>
+    <script src="http://webapi.amap.com/maps?v=1.3&key=c92fec0bcceafa9512f41501c0d42b1d"></script>
+    </head>
   <body>
     <div class="wrap">
 	<nav>
 		<ul class="menu">
-            <li><a href="#"><span class="iconic home"></span> 首页</a></li>
-            <li><a href="#"><span class="iconic home"></span> 我要上传</a></li>
-			<li><a href="#"><span class="iconic plus-alt"></span> 民族语言</a>
+            <li><a href="#"><span class="iconic home"></span> 首页Home</a></li>
+            <li><a href="#"><span class="iconic home"></span> 我要上传Upload Resource</a></li>
+			<li><a href="#"><span class="iconic plus-alt"></span> 民族语言Minority Language</a>
 				<ul>
-					<li><a href="#">藏语</a></li>
-					<li><a href="#">蒙古语</a></li>
+					<li><a href="#">藏语Tibetan</a></li>
+					<li><a href="#">蒙古语Mongolian</a></li>
 				</ul>
 			</li>
-			<li><a href="#"><span class="iconic magnifying-glass"></span> 汉语方言</a>
+			<li><a href="#"><span class="iconic magnifying-glass"></span> 汉语方言Chinese Dialects</a>
 				<ul>
-					<li><a href="#">吴方言</a></li>
-					<li><a href="#">闽方言</a></li>
-					<li><a href="#">粤语</a></li>
-					<li><a href="#">湘方言</a></li>
+					<li><a href="#">吴方言Wu</a></li>
+					<li><a href="#">闽方言Min</a></li>
+					<li><a href="#">粤语Cantonese</a></li>
+					<li><a href="#">湘方言Xiang</a></li>
+                    <li><a href="#">官话Mandarin</a></li>
+                        <ul>  
+					        <li><a href="#">北方官话North Mandarin</a></li>
+					        <li><a href="#">江淮官话Jianghuai Mandarin</a></li>
+				        </ul>
 				</ul>
 			</li>
-			<li><a href="#"><span class="iconic map-pin"></span>普通话 </a>
+			<li><a href="#"><span class="iconic map-pin"></span>普通话Putonghua </a>
 				<ul>
-					<li><a href="#">东北口音</a></li>
-					<li><a href="#">山东</a></li>
-					<li><a href="#">安徽</a></li>
-					<li><a href="#">湖北</a></li>
-					<li><a href="#">湖南</a></li>
-					<li><a href="#">江淮</a></li>
+					<li><a href="#">东北地区Northeast China</a></li>
+					<li><a href="#">华北地区North China</a></li>
+					<li><a href="#">华东地区East China</a></li>
+					<li><a href="#">华中地区Middle China</a></li>
+					<li><a href="#">华南地区South China</a></li>
+					<li><a href="#">西北地区Northwest China</a></li>
+                    <li><a href="#">西南地区Southwest China</a></li>
 				</ul>
 			</li>
-			<li><a href="#"><span class="iconic mail"></span> 关于我们</a>
+			<li><a href="#"><span class="iconic mail"></span> 关于我们About Us</a>
 				<ul>
 					<li><a href="#">说明</a></li>
 					<li><a href="#">联系我们</a></li>
@@ -47,10 +54,9 @@
 		<div class="clearfix"></div>
 	</nav>
 	</div>
-   <div id="container" tabindex="0"></div>
-   <script src="http://webapi.amap.com/js/marker2.js"></script>
-   <script src="http://webapi.amap.com/maps?v=1.3&key=c92fec0bcceafa9512f41501c0d42b1d"></script>
-   <script src="scripts/multimarker.js"></script> 
-   <body scroll="no"> 
+    <!--创建地图容器-->
+   <div id="container"></div> 
+   <!--动作要在定义了元素之后-->
+   <script src="scripts/multimarker.js"></script>   
   </body>
 </html>
